scarlet/cms/static/scarlet/compass/scss/admin/modules/_crops.scss
// Have to scope this to section#main =(
section#main {

	label,
	.field {
		display: inline-block;
	}

	.field {
		input {
			width: 60px;
		}
	}
}

.crop-info {
	margin:0 22px;

	h2 {
		padding: 10px 0;
	}
}

.crop-settings {
	margin: 0;
	padding: 0;

	li {
		display: inline-block;
		padding: 0 10px 0 0px;
	}
}

.crop-nav {
	border-radius: 10px;
	border: 1px solid #ccc;
	padding: 10px;
	display: inline-block;

	.row {
		display: block;
		padding: 10px;
		margin: 2px 0;
		background: rgba(#ccc, .5);

		.col {
			display: inline-block;

			&:nth-child(1),
			&:nth-child(2) {
				min-width: 200px;
			}
		}
	}
}

/* jquery.Jcrop.css v0.9.12 - MIT License */
/*
  The outer-most container in a typical Jcrop instance
  If you are having difficulty with formatting related to styles
  on a parent element, place any fixes here or in a like selector

  You can also style this element if you want to add a border, etc
  A better method for styling can be seen below with .jcrop-light
  (Add a class to the holder and style elements for that extended class)
*/

$border-color: #ccc;
$bg-color : #fff;

.jcrop {
  padding: 0 1em 1em;
  border-radius: .5em;
  display:inline-block;

  .original {
    margin: auto;
    text-align: center;

    > div {
      display: inline-block;
    }
  }

  .preview {
    display: inline-block;
    background: #fff;
    @include box-shadow(0 10px 20px 0 #000);
    padding: .5em;
    margin: 1em auto;
    border-radius: .3em 0em .3em .3em;
    position: relative;
    cursor: pointer;

    .thumb {
      overflow: hidden;
      position: relative;

      img {
        position: absolute;
      }
    }

    .label {
      background: #fff;
      position: absolute;
      padding: .5em 1em;
      right: 0;
      top: 0;
      border-radius: 0;
      opacity: .8;

      &:after {
        color: #000;
        font-size: .8em;
        line-height: .8em;
      }
    }

    &[data-zoom="out"] {

      .label:after {
        content: "Preview";
      }

      .zoom {
        content : "-";
      }
    }

    &[data-zoom="in"] {
      .label:after {
        content: "Actual";
      }

      .zoom {
        content : "+";
      }
    }

    .zoom {
      content : "-";
      margin-right: 3px;
    }
  }
}


.jcrop-holder {
  direction: ltr;
  text-align: left;
}
/* Selection Border */
.jcrop-vline,
.jcrop-hline {
  background: #ffffff;
  font-size: 0;
  position: absolute;
}
.jcrop-vline {
  height: 100%;
  width: 1px !important;
}
.jcrop-vline.right {
  right: 0;
}
.jcrop-hline {
  height: 1px !important;
  width: 100%;
}
.jcrop-hline.bottom {
  bottom: 0;
}
/* Invisible click targets */
.jcrop-tracker {
  height: 100%;
  width: 100%;
  /* "turn off" link highlight */
  -webkit-tap-highlight-color: transparent;
  /* disable callout, image save panel */
  -webkit-touch-callout: none;
  /* disable cut copy paste */
  -webkit-user-select: none;
}
/* Selection Handles */
.jcrop-handle {
  background-color: #333333;
  border: 1px #eeeeee solid;
  width: 7px;
  height: 7px;
  font-size: 1px;
}
.jcrop-handle.ord-n {
  left: 50%;
  margin-left: -4px;
  margin-top: -4px;
  top: 0;
}
.jcrop-handle.ord-s {
  bottom: 0;
  left: 50%;
  margin-bottom: -4px;
  margin-left: -4px;
}
.jcrop-handle.ord-e {
  margin-right: -4px;
  margin-top: -4px;
  right: 0;
  top: 50%;
}
.jcrop-handle.ord-w {
  left: 0;
  margin-left: -4px;
  margin-top: -4px;
  top: 50%;
}
.jcrop-handle.ord-nw {
  left: 0;
  margin-left: -4px;
  margin-top: -4px;
  top: 0;
}
.jcrop-handle.ord-ne {
  margin-right: -4px;
  margin-top: -4px;
  right: 0;
  top: 0;
}
.jcrop-handle.ord-se {
  bottom: 0;
  margin-bottom: -4px;
  margin-right: -4px;
  right: 0;
}
.jcrop-handle.ord-sw {
  bottom: 0;
  left: 0;
  margin-bottom: -4px;
  margin-left: -4px;
}
/* Dragbars */
.jcrop-dragbar.ord-n,
.jcrop-dragbar.ord-s {
  height: 7px;
  width: 100%;
}
.jcrop-dragbar.ord-e,
.jcrop-dragbar.ord-w {
  height: 100%;
  width: 7px;
}
.jcrop-dragbar.ord-n {
  margin-top: -4px;
}
.jcrop-dragbar.ord-s {
  bottom: 0;
  margin-bottom: -4px;
}
.jcrop-dragbar.ord-e {
  margin-right: -4px;
  right: 0;
}
.jcrop-dragbar.ord-w {
  margin-left: -4px;
}
/* The "jcrop-light" class/extension */
.jcrop-light .jcrop-vline,
.jcrop-light .jcrop-hline {
  background: #ffffff;
  filter: alpha(opacity=70) !important;
  opacity: .70!important;
}
.jcrop-light .jcrop-handle {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #000000;
  border-color: #ffffff;
  border-radius: 3px;
}
/* The "jcrop-dark" class/extension */
.jcrop-dark .jcrop-vline,
.jcrop-dark .jcrop-hline {
  background: #000000;
  filter: alpha(opacity=70) !important;
  opacity: 0.7 !important;
}
.jcrop-dark .jcrop-handle {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #ffffff;
  border-color: #000000;
  border-radius: 3px;
}
/* Simple macro to turn off the antlines */
.solid-line .jcrop-vline,
.solid-line .jcrop-hline {
  background: #ffffff;
}
/* Fix for twitter bootstrap et al. */
.jcrop-holder img,
img.jcrop-preview {
  max-width: none;
}

